RESOLVED FIXED85147
jsSingleCharacterString and jsSingleCharacterSubstring are not inlined
https://bugs.webkit.org/show_bug.cgi?id=85147
Summary jsSingleCharacterString and jsSingleCharacterSubstring are not inlined
Benjamin Poulain
Reported 2012-04-28 17:35:38 PDT
jsSingleCharacterString and jsSingleCharacterSubstring are not inlined
Attachments
Patch (2.09 KB, patch)
2012-04-28 17:42 PDT, Benjamin Poulain
no flags
Benjamin Poulain
Comment 1 2012-04-28 17:42:55 PDT
Benjamin Poulain
Comment 2 2012-04-30 12:11:16 PDT
Comment on attachment 139381 [details] Patch Clearing flags on attachment: 139381 Committed r115656: <http://trac.webkit.org/changeset/115656>
Benjamin Poulain
Comment 3 2012-04-30 12:11:23 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.