jsSingleCharacterString and jsSingleCharacterSubstring are not inlined https://bugs.webkit.org/show_bug.cgi?id=85147

Reviewed by Darin Adler.

The functions jsSingleCharacterString() and jsSingleCharacterSubstring() were not inlined
by the compiler. This annihilate the gains of using SmallStrings.

On stringProtoFuncCharAt(), this patch improves the performance by 11%.

* runtime/JSString.h:
(JSC::jsSingleCharacterString):
(JSC::jsSingleCharacterSubstring):


Canonical link: https://commits.webkit.org/102760@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@115656 268f45cc-cd09-0410-ab3c-d52691b4dbfc